<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".movies.AdicionarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_edit_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/add_movie" />

            <TextView
                android:id="@+id/text_view_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:text="@string/name" />

            <EditText
                android:id="@+id/editTextTextMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/movie2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:text="@string/category" />

            <EditText
                android:id="@+id/editTextTextCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:text="Category" />

            <TextView
                android:id="@+id/movie3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/session" />

            <EditText
                android:id="@+id/edit_session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:text="sessao" />

            <Button
                android:id="@+id/button_add_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Salvar" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>