<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.AdicionarClienteFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_client"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:text="@string/Edit_client"/>

            <TextView
                android:id="@+id/text_view_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:text="@string/id_poltrona" />

            <EditText
                android:id="@+id/editTextTextPoltrona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Poltrona do cliente" />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:text="@string/age_client" />

            <EditText
                android:id="@+id/editTextTextCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:layout_gravity="center"
                android:text="Idade do cliente" />

            <Button
                android:id="@+id/button_add_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Salvar" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>